# cuDeep

./: .clang-format  .cursorrules  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
benchmarks/: bench_all.py  bench_matmul.py  bench_sgemm.cu  bench_vs_reference.cu  test_mma  test_mma.cu  verify_tc  verify_tc.cu
examples/: basic_tensor.py  simple_mlp.py
include/cudeep/: common.cuh  error.cuh  memory.cuh  ptx_intrinsics.cuh  stream.cuh  tensor.cuh
include/cudeep/kernels/: activation.cuh  conv.cuh  elementwise.cuh  loss.cuh  matmul.cuh  norm.cuh  optim.cuh  pool.cuh  reduce.cuh  unary.cuh
python/cuDeep/: __init__.py  _core.py  autograd.py  init.py  layers.py  lr_scheduler.py  nn.py  optim.py  tensor.py  utils.py
src/: memory.cu  stream.cu  tensor.cu
src/bindings/: module.cpp
src/kernels/: activation_kernel.cu  conv_kernel.cu  elementwise_kernel.cu  loss_kernel.cu  matmul_kernel.cu  norm_kernel.cu  optim_kernel.cu  pool_kernel.cu  reduce_kernel.cu  unary_kernel.cu
tests/: CMakeLists.txt  conftest.py
tests/integration/: test_training_loop.py
tests/performance/: test_perf.py
tests/unit/: test_advanced_kernels.cu  test_autograd.py  test_functional.py  test_kernels.cu  test_layers.py  test_matmul.cu  test_nn.py  test_optim.py  test_tensor.cu  test_tensor_ops.py  test_tensor_py.py
