[build-system]
requires = ["setuptools>=64", "wheel", "cmake>=3.24", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "cuDeep"
version = "0.1.0"
description = "Ultra-high performance deep learning library implemented in CUDA"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "sphinx"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
